trying to put google maps in

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -128,8 +128,9 @@ div {
 /*Overflow SCROLL ENDS*/
 
 /*==================================================*/
+/*Google MAPS*/
 
-
+<div id="map" style="width:400px;height:400px">
 
 /*==================================================*/
 
