--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,13 @@
     color: #a4003a;
     text-shadow: none;
 }
+/*Background Color*/
+
+body {
+    background-color: grey;
+}
+
+
 
 /* A better looking default horizontal rule */
 
