--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,12 +16,12 @@
     color: #a4003a;
     text-shadow: none;
 }
-/*Background Color*/
+/*Background Color STARTS*/
 
 body {
     background-color: grey;
 }
-
+/*Background Color ENDS*/
 
 
 /* A better looking default horizontal rule */
