--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,11 @@ input[type=submit]:hover {
 	color: #1abc9c;
 }
 
+.navbar {
+  overflow: hidden;
+  background-color: #000;
+}
+
 /*Nav Bar ENDS*/
 /* ==========================================================================
    Wrap Sections
